Deploy/K8S/BoundedContexts/pods-admin.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: admin-core
  namespace: cbs-app
  labels:
    k9s-app: cbs-admin-core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k9s-app: cbs-admin-core
    spec:
      containers:
      - name: admin-core
        image: redcrossredcrescent/cbs-admin-backend:latest
        ports:
        - containerPort: 80
          name: api
        volumeMounts:
          - mountPath: /CBS/Core/.dolittle/resources.json
            subPath: resources.json
            name: dolittle-config-volume
      volumes:
        - name: dolittle-config-volume
          configMap:
            name: admin-core-dolittle-config
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: admin-web
  namespace: cbs-app
  labels:
    k9s-app: cbs-admin-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k9s-app: cbs-admin-web
    spec:
      containers:
      - name: admin-web
        image: redcrossredcrescent/cbs-admin-frontend:latest
        ports:
        - containerPort: 80
          name: ui
