Deploy/K8S/BoundedContexts/pods-notification.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: notification-core
  namespace: cbs-app
  labels:
    k9s-app: cbs-notification-core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k9s-app: cbs-notification-core
    spec:
      containers:
      - name: notification-core
        image: redcrossredcrescent/cbs-notification-backend:latest
        ports:
        - containerPort: 80
          name: api
        volumeMounts:
          - mountPath: /CBS/Core/.dolittle/resources.json
            subPath: resources.json
            name: dolittle-config-volume
          - mountPath: /CBS/Core/.dolittle/tenants.json
            subPath: tenants.json
            name: dolittle-tenants-config-volume
          - mountPath: /CBS/Core/.dolittle/tenant-map.json
            subPath: tenant-map.json
            name: dolittle-tenants-config-volume
      volumes:
        - name: dolittle-config-volume
          configMap:
            name: notification-core-dolittle-config
        - name: dolittle-tenants-config-volume
          configMap:
            name: tenants-dolittle-config
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: notification-web
  namespace: cbs-app
  labels:
    k9s-app: cbs-notification-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k9s-app: cbs-notification-web
    spec:
      containers:
      - name: notification-web
        image: redcrossredcrescent/cbs-notification-frontend:latest
        ports:
        - containerPort: 80
          name: ui
