Deploy/K8S/BoundedContexts/pods-reporting.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: reporting-core
  namespace: cbs-app
  labels:
    k9s-app: cbs-reporting-core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k9s-app: cbs-reporting-core
    spec:
      containers:
      - name: reporting-core
        image: redcrossredcrescent/cbs-reporting-core:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: api
        volumeMounts:
          - mountPath: /CBS/Core/.dolittle/resources.json
            subPath: resources.json
            name: dolittle-config-volume
      volumes:
        - name: dolittle-config-volume
          configMap:
            name: reporting-core-dolittle-config
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: reporting-web
  namespace: cbs-app
  labels:
    k9s-app: cbs-reporting-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k9s-app: cbs-reporting-web
    spec:
      containers:
      - name: reporting-web
        image: redcrossredcrescent/cbs-reporting-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: ui
