Deploy/K8S/BoundedContexts/pods-usermanagement.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: usermanagement-core
  namespace: cbs-app
  labels:
    k9s-app: cbs-usermanagement-core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k9s-app: cbs-usermanagement-core
    spec:
      containers:
      - name: usermanagement-core
        image: redcrossredcrescent/cbs-usermgmt-backend:latest
        ports:
        - containerPort: 80
          name: api
        volumeMounts:
          - mountPath: /CBS/Core/.dolittle/resources.json
            subPath: resources.json
            name: dolittle-config-volume
      volumes:
        - name: dolittle-config-volume
          configMap:
            name: usermanagement-core-dolittle-config
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: usermanagement-web
  namespace: cbs-app
  labels:
    k9s-app: cbs-usermanagement-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k9s-app: cbs-usermanagement-web
    spec:
      containers:
      - name: usermanagement-core
        image: redcrossredcrescent/cbs-usermgmt-frontend:latest
        ports:
        - containerPort: 80
          name: ui
